# n3-torch

./: .gitignore  Cargo.toml  README.md
models/: lenet.n3  lenet.py  train.n3  vgg.n3
n3/: __init__.py
n3/torch/: transform.py
src/: compile.rs  error.rs  guide.rs  lib.rs  module.rs  shape.rs
src/externs/: base.rs  mod.rs
src/externs/nn/: conv.rs  dropout.rs  linear.rs  mod.rs  tensor.rs
src/externs/nn/activations/: relu.rs  softmax.rs
src/writer/: id.rs  import.rs  indent.rs  mod.rs  shape.rs  value.rs
tests/: lenet.rs  vgg.rs
